fix: aside hover in dark mode

--- a/src/style/darkMode.css
+++ b/src/style/darkMode.css
@@ -22,3 +22,7 @@
 .dark .footer-icon{
     color: var(--text-color);
 }
+
+.dark .sidebar>ul>li:hover{
+    background-color: var(--dark-btn-hover);
+}
