--- a/src/style/variables.css
+++ b/src/style/variables.css
@@ -8,4 +8,5 @@
     --dark-main-color: #282827;
     --dark-aside-bg-color: #111111;
     --trash-btn-color: #FF6B6B;
+    --dark-btn-hover:#8de4ae84;
 }
